--- a/Memo/Memo/Base.lproj/Main.storyboard
+++ b/Memo/Memo/Base.lproj/Main.storyboard
@@ -91,8 +91,15 @@
                                 <action selector="cancelButtonTapped:" destination="YFg-Xd-tLY" id="rWW-FE-KAz"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="vpg-HR-7Ed"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="vpg-HR-7Ed">
+                            <connections>
+                                <action selector="saveButtonTapped:" destination="YFg-Xd-tLY" id="bMV-AD-0Da"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="memoTextView" destination="wlS-I2-P6g" id="UzX-bx-svm"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JvP-cV-ypA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
