--- a/Memo/Memo/Base.lproj/Main.storyboard
+++ b/Memo/Memo/Base.lproj/Main.storyboard
@@ -128,6 +128,12 @@
                                             <segue destination="dAi-UL-cdP" kind="presentation" id="1qE-sU-huK"/>
                                         </connections>
                                     </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Q7Z-LF-haK"/>
+                                    <barButtonItem systemItem="action" id="Mkp-Yb-Be2">
+                                        <connections>
+                                            <action selector="share:" destination="YV3-ca-W9j" id="Kua-os-mPQ"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                             </toolbar>
                         </subviews>
